cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(main)
include(CPack)

if (MSVC)
    set(CMAKE_CXX_COMPILER cl.exe)
    set(CMAKE_PREFIX_PATH D:/libtorch/release/share/cmake/Torch) # windows path (libtorch win version)
    find_package(Torch REQUIRED)
    add_executable(main sinlu.h model.h main.cpp)
    target_link_libraries(main ${TORCH_LIBRARIES})
else()
    set(CMAKE_CXX_COMPILER clang++)
    set(CMAKE CMAKE_PREFIX_PATH /mnt/d/linux_wsl_lib/libtorch/share/cmake/Torch) # linux path (libtorch linux version)
    add_executable(main sinlu.h model.h main.cpp)
    find_package(Torch REQUIRED PATHS /mnt/d/linux_wsl_lib/libtorch) # linux path (libtorch linux version)
    include_directories(SYSTEM ${TORCH_INCLUDE_DIRS})
    target_link_libraries(main ${TORCH_LIBRARIES})
    set(CPACK_PROJECT_NAME ${PROJECT_NAME})
    set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
endif(MSVC)